--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.login-form{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.my-container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+@media (min-width: 768px) {
+    .my-container {
+        width: 750px;
+    }
+}
+@media (min-width: 992px) {
+    .my-container {
+        width: 970px;
+    }
+}
+@media (min-width: 1200px) {
+    .my-container {
+        width: 1170px;
+    }
+}
