rating mid level bug remains

--- a/src/UserComponents/Navbar/Nav.css
+++ b/src/UserComponents/Navbar/Nav.css
@@ -3,5 +3,9 @@
 }
 
 .each-link{
-    @apply text-gray-800 hover:text-white rounded p-2 hover:bg-violet-600 duration-500
+    @apply text-gray-800 hover:text-white rounded p-2 hover:bg-violet-500 duration-500
+}
+
+.now-link{
+    @apply text-white rounded p-2 bg-violet-700
 }
